<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="top"
            android:orientation="vertical">
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="24dp"
                >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/home_img"
                        android:adjustViewBounds="true"
                        android:contentDescription="TODO"
                        />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:layout_margin="8dp"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        />
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/by"
                            android:layout_margin="8dp"
                            android:textSize="15sp"
                            android:gravity="center"
                            />
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developer_name"
                            android:layout_margin="8dp"
                            android:textSize="15sp"
                            android:gravity="center"
                            />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="24dp"
                android:layout_marginHorizontal="16dp"
                >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version_outdated"
                        android:textSize="20sp"
                        android:textColor="@android:color/black"
                        />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/install_updates_to_continue"
                        android:textSize="15sp"
                        />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/current"
                            android:textColor="@android:color/black"
                            />
                    <TextView
                            android:id="@+id/currentVerison"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2.0.3"
                            android:layout_marginLeft="8dp"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/latest"
                            android:textColor="@android:color/black"
                            />
                    <TextView
                            android:id="@+id/latestVerison"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2.0.3"
                            android:layout_marginLeft="8dp"/>

                </LinearLayout>
                <Button
                        android:id="@+id/downloadInstallButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/download"
                        android:layout_marginBottom="8dp"
                        />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>